Fix the header overflow in the small screen size

--- a/css/style.css
+++ b/css/style.css
@@ -539,7 +539,7 @@ footer .footer-links {
   .main-container {
     padding: 0 !important;
   }
-  
+
   .col-sm-12 {
     padding: 0 !important;
   }
@@ -596,6 +596,25 @@ footer .footer-links {
 
   .topNavbar {
     flex-grow: 1;
+  }
+}
+
+@media screen and (max-width: 348px) {
+  header .topNavbar {
+    height: 40px;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    z-index: 99;
+    width: 100%;
+  }
+
+  .topNavbar .btn{
+    height: 23px;
+    margin: 0;
+    padding: 0;
+    font-size: .7rem;
+    font-weight: lighter;
   }
 }
 
